examples/__outputs__/10_transport-http/transport-http_method-get.output.txt
node:events:498
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::3000
    at Server.setupListenHandle [as _listen2] (node:net:XX:XX)
    at listenInCluster (node:net:XX:XX)
    at Server.listen (node:net:XX:XX)
    at serveSchema (/some/path/to/helpers.ts:XX:XX)
    at process.processTicksAndRejections (node:internal/process/task_queues:XX:XX)
    at async <anonymous> (/some/path/to/transport-http_method-get.ts:XX:XX)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:XX:XX)
    at process.processTicksAndRejections (node:internal/process/task_queues:XX:XX) {
  code: 'EADDRINUSE',
  errno: -48,
  syscall: 'listen',
  address: '::',
  port: 3000
}

Node.js vXX.XX.XX